Pull up following revision(s) (requested by tron in ticket #1104): 	sys/netsmb/smb_smb.c: revision 1.31 	sys/netsmb/smb_smb.c: revision 1.32 Fix detection of SMB capabilities according to the CIFS spec: 1.) SMB_CAP_LARGE_FILES advertises support for 64-bit file offsets. 2.) SMB_CAP_LARGE_READX and SMB_CAP_LARGE_WRITEX advertise support for     large reads and writes (larger than 64KB). The code previously only used SMB_CAP_LARGE_READX and SMB_CAP_LARGE_WRITEX which is not correct and doesn't work for the Apple Time Capsule which only supports SMB_CAP_LARGE_FILES. With these changes SMBFS can copy a 5GB to a Time Capsule and read it back without problems. Thanks a lot to Allen Briggs for pointing out the broke assumptions and explaining the CIFS spec to me. This fixes PR kern/42175. Fix cut & paste error spotted by Nicolas Joly.